[gd_scene load_steps=15 format=3 uid="uid://rd3se6x7lhu6"]

[ext_resource type="Script" path="res://scripts/Egg.gd" id="1_kme2o"]
[ext_resource type="Texture2D" uid="uid://bkwvkrs7f8uux" path="res://tex/needle_breaking1.png" id="2_uq65v"]
[ext_resource type="Texture2D" uid="uid://bdlxjp8jnp6sa" path="res://tex/needle_breaking2.png" id="3_bdywv"]
[ext_resource type="FontFile" uid="uid://5e7ukqgk7oc0" path="res://fonts/salmon-typewriter-font/Salmon Typewriter fonts/Salmon Typewriter 9 Bold.ttf" id="4_ihqxd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j2pj3"]
resource_name = "Material.001"
albedo_color = Color(0.786899, 0.741444, 0.648003, 1)
emission_enabled = true
emission = Color(0.756675, 0.705192, 0.59227, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_lo5ic"]
_surfaces = [{
"aabb": AABB(-0.00203463, -0.00205463, -0.00518059, 0.00407455, 0.00407455, 0.00517351),
"format": 34896613377,
"index_count": 240,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 3, 0, 2, 0, 5, 0, 3, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 7, 0, 8, 0, 9, 0, 2, 0, 10, 0, 11, 0, 2, 0, 11, 0, 5, 0, 6, 0, 12, 0, 13, 0, 6, 0, 13, 0, 8, 0, 1, 0, 14, 0, 10, 0, 1, 0, 10, 0, 2, 0, 5, 0, 11, 0, 12, 0, 5, 0, 12, 0, 6, 0, 10, 0, 15, 0, 16, 0, 10, 0, 16, 0, 11, 0, 12, 0, 17, 0, 18, 0, 12, 0, 18, 0, 13, 0, 14, 0, 19, 0, 15, 0, 14, 0, 15, 0, 10, 0, 11, 0, 16, 0, 17, 0, 11, 0, 17, 0, 12, 0, 15, 0, 20, 0, 21, 0, 15, 0, 21, 0, 16, 0, 17, 0, 22, 0, 23, 0, 17, 0, 23, 0, 18, 0, 19, 0, 24, 0, 20, 0, 19, 0, 20, 0, 15, 0, 16, 0, 21, 0, 22, 0, 16, 0, 22, 0, 17, 0, 20, 0, 25, 0, 26, 0, 20, 0, 26, 0, 21, 0, 22, 0, 27, 0, 28, 0, 22, 0, 28, 0, 23, 0, 24, 0, 29, 0, 25, 0, 24, 0, 25, 0, 20, 0, 21, 0, 26, 0, 27, 0, 21, 0, 27, 0, 22, 0, 27, 0, 30, 0, 31, 0, 27, 0, 31, 0, 28, 0, 29, 0, 32, 0, 33, 0, 29, 0, 33, 0, 25, 0, 26, 0, 34, 0, 30, 0, 26, 0, 30, 0, 27, 0, 25, 0, 33, 0, 34, 0, 25, 0, 34, 0, 26, 0, 32, 0, 35, 0, 36, 0, 32, 0, 36, 0, 33, 0, 34, 0, 37, 0, 38, 0, 34, 0, 38, 0, 30, 0, 33, 0, 36, 0, 37, 0, 33, 0, 37, 0, 34, 0, 30, 0, 38, 0, 39, 0, 30, 0, 39, 0, 31, 0, 9, 0, 8, 0, 40, 0, 41, 0, 1, 0, 0, 0, 41, 0, 14, 0, 1, 0, 8, 0, 13, 0, 40, 0, 41, 0, 19, 0, 14, 0, 13, 0, 18, 0, 40, 0, 41, 0, 24, 0, 19, 0, 18, 0, 23, 0, 40, 0, 23, 0, 28, 0, 40, 0, 41, 0, 29, 0, 24, 0, 28, 0, 31, 0, 40, 0, 41, 0, 32, 0, 29, 0, 31, 0, 39, 0, 40, 0, 41, 0, 35, 0, 32, 0, 35, 0, 0, 0, 3, 0, 35, 0, 3, 0, 36, 0, 37, 0, 4, 0, 7, 0, 37, 0, 7, 0, 38, 0, 39, 0, 9, 0, 40, 0, 41, 0, 0, 0, 35, 0, 36, 0, 3, 0, 4, 0, 36, 0, 4, 0, 37, 0, 38, 0, 7, 0, 9, 0, 38, 0, 9, 0, 39, 0),
"lods": [0.000764549, PackedByteArray(3, 0, 41, 0, 2, 0, 3, 0, 2, 0, 4, 0, 41, 0, 3, 0, 35, 0, 41, 0, 11, 0, 2, 0, 2, 0, 11, 0, 4, 0, 35, 0, 3, 0, 36, 0, 36, 0, 3, 0, 4, 0, 41, 0, 35, 0, 29, 0, 29, 0, 35, 0, 36, 0, 41, 0, 15, 0, 11, 0, 41, 0, 29, 0, 15, 0, 4, 0, 11, 0, 13, 0, 11, 0, 15, 0, 13, 0, 15, 0, 29, 0, 25, 0, 29, 0, 36, 0, 25, 0, 15, 0, 25, 0, 22, 0, 15, 0, 22, 0, 13, 0, 25, 0, 36, 0, 34, 0, 25, 0, 34, 0, 22, 0, 36, 0, 4, 0, 37, 0, 36, 0, 37, 0, 34, 0, 4, 0, 13, 0, 9, 0, 37, 0, 4, 0, 9, 0, 13, 0, 22, 0, 23, 0, 34, 0, 37, 0, 39, 0, 22, 0, 34, 0, 39, 0, 37, 0, 9, 0, 39, 0, 22, 0, 39, 0, 23, 0, 9, 0, 13, 0, 40, 0, 39, 0, 9, 0, 40, 0, 13, 0, 23, 0, 40, 0, 23, 0, 39, 0, 40, 0), 0.00116252, PackedByteArray(41, 0, 11, 0, 4, 0, 41, 0, 25, 0, 11, 0, 41, 0, 36, 0, 25, 0, 36, 0, 41, 0, 4, 0, 4, 0, 11, 0, 13, 0, 25, 0, 36, 0, 37, 0, 36, 0, 4, 0, 37, 0, 11, 0, 25, 0, 23, 0, 11, 0, 23, 0, 13, 0, 25, 0, 37, 0, 23, 0, 4, 0, 13, 0, 40, 0, 37, 0, 4, 0, 40, 0, 13, 0, 23, 0, 40, 0, 23, 0, 37, 0, 39, 0, 37, 0, 40, 0, 39, 0, 23, 0, 39, 0, 40, 0), 0.00153637, PackedByteArray(11, 0, 23, 0, 40, 0, 23, 0, 39, 0, 40, 0, 25, 0, 40, 0, 39, 0, 23, 0, 25, 0, 39, 0, 25, 0, 11, 0, 40, 0, 11, 0, 25, 0, 23, 0, 41, 0, 25, 0, 11, 0, 41, 0, 11, 0, 25, 0), 0.00177718, PackedByteArray(41, 0, 23, 0, 40, 0, 23, 0, 37, 0, 40, 0, 37, 0, 41, 0, 40, 0, 41, 0, 37, 0, 23, 0)],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray(69, 198, 255, 127, 42, 241, 0, 0, 176, 177, 176, 177, 42, 241, 0, 0, 166, 215, 166, 215, 197, 195, 0, 0, 245, 251, 255, 127, 197, 195, 0, 0, 255, 255, 255, 127, 250, 140, 0, 0, 129, 218, 129, 218, 250, 140, 0, 0, 211, 200, 211, 200, 154, 70, 0, 0, 254, 230, 255, 127, 154, 70, 0, 0, 84, 170, 84, 170, 121, 19, 0, 0, 221, 187, 255, 127, 121, 19, 0, 0, 255, 127, 245, 251, 197, 195, 0, 0, 42, 128, 255, 255, 250, 140, 0, 0, 42, 128, 254, 230, 154, 70, 0, 0, 255, 127, 221, 187, 121, 19, 0, 0, 255, 127, 69, 198, 42, 241, 0, 0, 88, 40, 166, 215, 197, 195, 0, 0, 125, 37, 129, 218, 250, 140, 0, 0, 43, 55, 211, 200, 154, 70, 0, 0, 170, 85, 84, 170, 121, 19, 0, 0, 78, 78, 176, 177, 42, 241, 0, 0, 9, 4, 255, 127, 197, 195, 0, 0, 0, 0, 255, 127, 250, 140, 0, 0, 0, 25, 255, 127, 154, 70, 0, 0, 33, 68, 255, 127, 121, 19, 0, 0, 185, 57, 255, 127, 42, 241, 0, 0, 88, 40, 88, 40, 197, 195, 0, 0, 125, 37, 125, 37, 250, 140, 0, 0, 43, 55, 43, 55, 154, 70, 0, 0, 170, 85, 170, 85, 121, 19, 0, 0, 78, 78, 78, 78, 42, 241, 0, 0, 255, 127, 0, 25, 154, 70, 0, 0, 255, 127, 33, 68, 121, 19, 0, 0, 255, 127, 185, 57, 42, 241, 0, 0, 255, 127, 9, 4, 197, 195, 0, 0, 255, 127, 0, 0, 250, 140, 0, 0, 176, 177, 78, 78, 42, 241, 0, 0, 166, 215, 88, 40, 197, 195, 0, 0, 129, 218, 125, 37, 250, 140, 0, 0, 211, 200, 43, 55, 154, 70, 0, 0, 84, 170, 170, 85, 121, 19, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 255, 127, 255, 127, 255, 255, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_2iipx"]
resource_name = "Sketchfab_Scene_Object_0"
_surfaces = [{
"aabb": AABB(-0.00203463, -0.00205463, -0.00518059, 0.00407455, 0.00407455, 0.00517351),
"format": 34896613383,
"index_count": 240,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 48, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 52, 0, 54, 0, 55, 0, 56, 0, 57, 0, 58, 0, 56, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 60, 0, 62, 0, 63, 0, 64, 0, 65, 0, 66, 0, 64, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 68, 0, 70, 0, 71, 0, 72, 0, 73, 0, 74, 0, 72, 0, 74, 0, 75, 0, 76, 0, 77, 0, 78, 0, 76, 0, 78, 0, 79, 0, 80, 0, 81, 0, 82, 0, 80, 0, 82, 0, 83, 0, 84, 0, 85, 0, 86, 0, 84, 0, 86, 0, 87, 0, 88, 0, 89, 0, 90, 0, 88, 0, 90, 0, 91, 0, 92, 0, 93, 0, 94, 0, 92, 0, 94, 0, 95, 0, 96, 0, 97, 0, 98, 0, 96, 0, 98, 0, 99, 0, 100, 0, 101, 0, 102, 0, 100, 0, 102, 0, 103, 0, 104, 0, 105, 0, 106, 0, 104, 0, 106, 0, 107, 0, 108, 0, 109, 0, 110, 0, 108, 0, 110, 0, 111, 0, 112, 0, 113, 0, 114, 0, 115, 0, 116, 0, 117, 0, 118, 0, 119, 0, 120, 0, 121, 0, 122, 0, 123, 0, 124, 0, 125, 0, 126, 0, 127, 0, 128, 0, 129, 0, 130, 0, 131, 0, 132, 0, 133, 0, 134, 0, 135, 0, 136, 0, 137, 0, 138, 0, 139, 0, 140, 0, 141, 0, 142, 0, 143, 0, 144, 0, 145, 0, 146, 0, 147, 0, 148, 0, 149, 0, 150, 0, 151, 0, 152, 0, 153, 0, 154, 0, 155, 0, 156, 0, 154, 0, 156, 0, 157, 0, 158, 0, 159, 0, 160, 0, 158, 0, 160, 0, 161, 0, 162, 0, 163, 0, 164, 0, 165, 0, 166, 0, 167, 0, 168, 0, 169, 0, 170, 0, 168, 0, 170, 0, 171, 0, 172, 0, 173, 0, 174, 0, 172, 0, 174, 0, 175, 0),
"lods": [0.000764549, PackedByteArray(3, 0, 115, 0, 2, 0, 3, 0, 2, 0, 4, 0, 115, 0, 3, 0, 97, 0, 115, 0, 18, 0, 2, 0, 2, 0, 18, 0, 4, 0, 97, 0, 3, 0, 98, 0, 98, 0, 3, 0, 4, 0, 115, 0, 97, 0, 73, 0, 73, 0, 97, 0, 98, 0, 115, 0, 33, 0, 18, 0, 115, 0, 73, 0, 33, 0, 4, 0, 18, 0, 22, 0, 18, 0, 33, 0, 22, 0, 33, 0, 73, 0, 65, 0, 73, 0, 98, 0, 65, 0, 33, 0, 65, 0, 53, 0, 33, 0, 53, 0, 22, 0, 65, 0, 98, 0, 89, 0, 65, 0, 89, 0, 53, 0, 98, 0, 4, 0, 101, 0, 98, 0, 101, 0, 89, 0, 4, 0, 22, 0, 15, 0, 101, 0, 4, 0, 15, 0, 22, 0, 53, 0, 54, 0, 89, 0, 101, 0, 110, 0, 53, 0, 89, 0, 110, 0, 101, 0, 15, 0, 110, 0, 53, 0, 110, 0, 54, 0, 15, 0, 22, 0, 114, 0, 110, 0, 15, 0, 114, 0, 22, 0, 54, 0, 114, 0, 54, 0, 110, 0, 114, 0), 0.00116252, PackedByteArray(115, 0, 18, 0, 4, 0, 115, 0, 65, 0, 18, 0, 115, 0, 98, 0, 65, 0, 98, 0, 115, 0, 4, 0, 4, 0, 18, 0, 22, 0, 65, 0, 98, 0, 101, 0, 98, 0, 4, 0, 101, 0, 18, 0, 65, 0, 54, 0, 18, 0, 54, 0, 22, 0, 65, 0, 101, 0, 54, 0, 4, 0, 22, 0, 114, 0, 101, 0, 4, 0, 114, 0, 22, 0, 54, 0, 114, 0, 54, 0, 101, 0, 110, 0, 101, 0, 114, 0, 110, 0, 54, 0, 110, 0, 114, 0), 0.00153637, PackedByteArray(18, 0, 54, 0, 114, 0, 54, 0, 110, 0, 114, 0, 65, 0, 114, 0, 110, 0, 54, 0, 65, 0, 110, 0, 65, 0, 18, 0, 114, 0, 18, 0, 65, 0, 54, 0, 115, 0, 65, 0, 18, 0, 115, 0, 18, 0, 65, 0), 0.00177718, PackedByteArray(115, 0, 54, 0, 114, 0, 54, 0, 101, 0, 114, 0, 101, 0, 115, 0, 114, 0, 115, 0, 101, 0, 54, 0)],
"material": SubResource("StandardMaterial3D_j2pj3"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 176,
"vertex_data": PackedByteArray(69, 198, 255, 127, 42, 241, 105, 163, 176, 177, 176, 177, 42, 241, 105, 163, 166, 215, 166, 215, 197, 195, 105, 163, 245, 251, 255, 127, 197, 195, 105, 163, 255, 255, 255, 127, 250, 140, 55, 204, 129, 218, 129, 218, 250, 140, 55, 204, 211, 200, 211, 200, 154, 70, 55, 204, 254, 230, 255, 127, 154, 70, 55, 204, 245, 251, 255, 127, 197, 195, 69, 191, 166, 215, 166, 215, 197, 195, 69, 191, 129, 218, 129, 218, 250, 140, 69, 191, 255, 255, 255, 127, 250, 140, 69, 191, 254, 230, 255, 127, 154, 70, 124, 216, 211, 200, 211, 200, 154, 70, 124, 216, 84, 170, 84, 170, 121, 19, 124, 216, 221, 187, 255, 127, 121, 19, 124, 216, 166, 215, 166, 215, 197, 195, 157, 200, 255, 127, 245, 251, 197, 195, 157, 200, 42, 128, 255, 255, 250, 140, 157, 200, 129, 218, 129, 218, 250, 140, 157, 200, 211, 200, 211, 200, 154, 70, 157, 235, 42, 128, 254, 230, 154, 70, 157, 235, 255, 127, 221, 187, 121, 19, 157, 235, 84, 170, 84, 170, 121, 19, 157, 235, 176, 177, 176, 177, 42, 241, 180, 163, 255, 127, 69, 198, 42, 241, 180, 163, 255, 127, 245, 251, 197, 195, 180, 163, 166, 215, 166, 215, 197, 195, 180, 163, 129, 218, 129, 218, 250, 140, 130, 222, 42, 128, 255, 255, 250, 140, 130, 222, 42, 128, 254, 230, 154, 70, 130, 222, 211, 200, 211, 200, 154, 70, 130, 222, 255, 127, 245, 251, 197, 195, 177, 200, 88, 40, 166, 215, 197, 195, 177, 200, 125, 37, 129, 218, 250, 140, 177, 200, 42, 128, 255, 255, 250, 140, 177, 200, 42, 128, 254, 230, 154, 70, 162, 235, 43, 55, 211, 200, 154, 70, 162, 235, 170, 85, 84, 170, 121, 19, 162, 235, 255, 127, 221, 187, 121, 19, 162, 235, 255, 127, 69, 198, 42, 241, 180, 163, 78, 78, 176, 177, 42, 241, 180, 163, 88, 40, 166, 215, 197, 195, 180, 163, 255, 127, 245, 251, 197, 195, 180, 163, 42, 128, 255, 255, 250, 140, 147, 222, 125, 37, 129, 218, 250, 140, 147, 222, 43, 55, 211, 200, 154, 70, 147, 222, 42, 128, 254, 230, 154, 70, 147, 222, 88, 40, 166, 215, 197, 195, 69, 191, 9, 4, 255, 127, 197, 195, 69, 191, 0, 0, 255, 127, 250, 140, 69, 191, 125, 37, 129, 218, 250, 140, 69, 191, 43, 55, 211, 200, 154, 70, 124, 216, 0, 25, 255, 127, 154, 70, 124, 216, 33, 68, 255, 127, 121, 19, 124, 216, 170, 85, 84, 170, 121, 19, 124, 216, 78, 78, 176, 177, 42, 241, 105, 163, 185, 57, 255, 127, 42, 241, 105, 163, 9, 4, 255, 127, 197, 195, 105, 163, 88, 40, 166, 215, 197, 195, 105, 163, 125, 37, 129, 218, 250, 140, 55, 204, 0, 0, 255, 127, 250, 140, 55, 204, 0, 25, 255, 127, 154, 70, 55, 204, 43, 55, 211, 200, 154, 70, 55, 204, 9, 4, 255, 127, 197, 195, 69, 191, 88, 40, 88, 40, 197, 195, 69, 191, 125, 37, 125, 37, 250, 140, 69, 191, 0, 0, 255, 127, 250, 140, 69, 191, 0, 25, 255, 127, 154, 70, 124, 216, 43, 55, 43, 55, 154, 70, 124, 216, 170, 85, 170, 85, 121, 19, 124, 216, 33, 68, 255, 127, 121, 19, 124, 216, 185, 57, 255, 127, 42, 241, 105, 163, 78, 78, 78, 78, 42, 241, 105, 163, 88, 40, 88, 40, 197, 195, 105, 163, 9, 4, 255, 127, 197, 195, 105, 163, 0, 0, 255, 127, 250, 140, 55, 204, 125, 37, 125, 37, 250, 140, 55, 204, 43, 55, 43, 55, 154, 70, 55, 204, 0, 25, 255, 127, 154, 70, 55, 204, 43, 55, 43, 55, 154, 70, 160, 235, 255, 127, 0, 25, 154, 70, 160, 235, 255, 127, 33, 68, 121, 19, 160, 235, 170, 85, 170, 85, 121, 19, 160, 235, 78, 78, 78, 78, 42, 241, 180, 163, 255, 127, 185, 57, 42, 241, 180, 163, 255, 127, 9, 4, 197, 195, 180, 163, 88, 40, 88, 40, 197, 195, 180, 163, 125, 37, 125, 37, 250, 140, 139, 222, 255, 127, 0, 0, 250, 140, 139, 222, 255, 127, 0, 25, 154, 70, 139, 222, 43, 55, 43, 55, 154, 70, 139, 222, 88, 40, 88, 40, 197, 195, 167, 200, 255, 127, 9, 4, 197, 195, 167, 200, 255, 127, 0, 0, 250, 140, 167, 200, 125, 37, 125, 37, 250, 140, 167, 200, 255, 127, 185, 57, 42, 241, 180, 163, 176, 177, 78, 78, 42, 241, 180, 163, 166, 215, 88, 40, 197, 195, 180, 163, 255, 127, 9, 4, 197, 195, 180, 163, 255, 127, 0, 0, 250, 140, 139, 222, 129, 218, 125, 37, 250, 140, 139, 222, 211, 200, 43, 55, 154, 70, 139, 222, 255, 127, 0, 25, 154, 70, 139, 222, 255, 127, 9, 4, 197, 195, 167, 200, 166, 215, 88, 40, 197, 195, 167, 200, 129, 218, 125, 37, 250, 140, 167, 200, 255, 127, 0, 0, 250, 140, 167, 200, 255, 127, 0, 25, 154, 70, 160, 235, 211, 200, 43, 55, 154, 70, 160, 235, 84, 170, 170, 85, 121, 19, 160, 235, 255, 127, 33, 68, 121, 19, 160, 235, 221, 187, 255, 127, 121, 19, 22, 240, 84, 170, 84, 170, 121, 19, 22, 240, 255, 127, 255, 127, 0, 0, 22, 240, 255, 127, 255, 127, 255, 255, 131, 139, 176, 177, 176, 177, 42, 241, 131, 139, 69, 198, 255, 127, 42, 241, 131, 139, 255, 127, 255, 127, 255, 255, 131, 139, 255, 127, 69, 198, 42, 241, 131, 139, 176, 177, 176, 177, 42, 241, 131, 139, 84, 170, 84, 170, 121, 19, 56, 249, 255, 127, 221, 187, 121, 19, 56, 249, 255, 127, 255, 127, 0, 0, 56, 249, 255, 127, 255, 127, 255, 255, 131, 139, 78, 78, 176, 177, 42, 241, 131, 139, 255, 127, 69, 198, 42, 241, 131, 139, 255, 127, 221, 187, 121, 19, 56, 249, 170, 85, 84, 170, 121, 19, 56, 249, 255, 127, 255, 127, 0, 0, 56, 249, 255, 127, 255, 127, 255, 255, 131, 139, 185, 57, 255, 127, 42, 241, 131, 139, 78, 78, 176, 177, 42, 241, 131, 139, 170, 85, 84, 170, 121, 19, 22, 240, 33, 68, 255, 127, 121, 19, 22, 240, 255, 127, 255, 127, 0, 0, 22, 240, 33, 68, 255, 127, 121, 19, 22, 240, 170, 85, 170, 85, 121, 19, 22, 240, 255, 127, 255, 127, 0, 0, 22, 240, 255, 127, 255, 127, 255, 255, 131, 139, 78, 78, 78, 78, 42, 241, 131, 139, 185, 57, 255, 127, 42, 241, 131, 139, 170, 85, 170, 85, 121, 19, 56, 249, 255, 127, 33, 68, 121, 19, 56, 249, 255, 127, 255, 127, 0, 0, 56, 249, 255, 127, 255, 127, 255, 255, 131, 139, 255, 127, 185, 57, 42, 241, 131, 139, 78, 78, 78, 78, 42, 241, 131, 139, 255, 127, 33, 68, 121, 19, 56, 249, 84, 170, 170, 85, 121, 19, 56, 249, 255, 127, 255, 127, 0, 0, 56, 249, 255, 127, 255, 127, 255, 255, 131, 139, 176, 177, 78, 78, 42, 241, 131, 139, 255, 127, 185, 57, 42, 241, 131, 139, 176, 177, 78, 78, 42, 241, 105, 163, 69, 198, 255, 127, 42, 241, 105, 163, 245, 251, 255, 127, 197, 195, 105, 163, 166, 215, 88, 40, 197, 195, 105, 163, 129, 218, 125, 37, 250, 140, 55, 204, 255, 255, 255, 127, 250, 140, 55, 204, 254, 230, 255, 127, 154, 70, 55, 204, 211, 200, 43, 55, 154, 70, 55, 204, 84, 170, 170, 85, 121, 19, 22, 240, 221, 187, 255, 127, 121, 19, 22, 240, 255, 127, 255, 127, 0, 0, 22, 240, 255, 127, 255, 127, 255, 255, 131, 139, 69, 198, 255, 127, 42, 241, 131, 139, 176, 177, 78, 78, 42, 241, 131, 139, 166, 215, 88, 40, 197, 195, 69, 191, 245, 251, 255, 127, 197, 195, 69, 191, 255, 255, 255, 127, 250, 140, 69, 191, 129, 218, 125, 37, 250, 140, 69, 191, 211, 200, 43, 55, 154, 70, 124, 216, 254, 230, 255, 127, 154, 70, 124, 216, 221, 187, 255, 127, 121, 19, 124, 216, 84, 170, 170, 85, 121, 19, 124, 216, 6, 170, 72, 29, 6, 170, 72, 29, 6, 170, 72, 29, 6, 170, 72, 29, 81, 160, 241, 13, 81, 160, 241, 13, 81, 160, 241, 13, 81, 160, 241, 13, 40, 165, 30, 19, 40, 165, 30, 19, 40, 165, 30, 19, 40, 165, 30, 19, 54, 154, 38, 9, 54, 154, 38, 9, 54, 154, 38, 9, 54, 154, 38, 9, 90, 203, 82, 40, 90, 203, 82, 40, 90, 203, 82, 40, 90, 203, 82, 40, 72, 177, 248, 10, 72, 177, 248, 10, 72, 177, 248, 10, 72, 177, 248, 10, 151, 217, 231, 73, 151, 217, 231, 73, 151, 217, 231, 73, 151, 217, 231, 73, 58, 190, 154, 21, 58, 190, 154, 21, 58, 190, 154, 21, 58, 190, 154, 21, 70, 168, 166, 180, 70, 168, 166, 180, 70, 168, 166, 180, 70, 168, 166, 180, 248, 138, 172, 206, 248, 138, 172, 206, 248, 138, 172, 206, 248, 138, 172, 206, 230, 201, 102, 166, 230, 201, 102, 166, 230, 201, 102, 166, 230, 201, 102, 166, 148, 149, 190, 193, 148, 149, 190, 193, 148, 149, 190, 193, 148, 149, 190, 193, 29, 147, 214, 218, 29, 147, 214, 218, 29, 147, 214, 218, 29, 147, 214, 218, 38, 137, 199, 229, 38, 137, 199, 229, 38, 137, 199, 229, 38, 137, 199, 229, 72, 157, 248, 213, 72, 157, 248, 213, 72, 157, 248, 213, 72, 157, 248, 213, 240, 141, 172, 223, 240, 141, 172, 223, 240, 141, 172, 223, 240, 141, 172, 223, 214, 90, 224, 236, 214, 90, 224, 236, 214, 90, 224, 236, 214, 90, 224, 236, 200, 101, 216, 246, 200, 101, 216, 246, 200, 101, 216, 246, 200, 101, 216, 246, 248, 85, 182, 226, 248, 85, 182, 226, 248, 85, 182, 226, 248, 85, 182, 226, 173, 95, 13, 242, 173, 95, 13, 242, 173, 95, 13, 242, 173, 95, 13, 242, 177, 78, 6, 245, 177, 78, 6, 245, 177, 78, 6, 245, 177, 78, 6, 245, 103, 38, 23, 182, 103, 38, 23, 182, 103, 38, 23, 182, 103, 38, 23, 182, 194, 65, 102, 234, 194, 65, 102, 234, 194, 65, 102, 234, 194, 65, 102, 234, 166, 52, 177, 215, 166, 52, 177, 215, 166, 52, 177, 215, 166, 52, 177, 215, 24, 54, 152, 89, 24, 54, 152, 89, 24, 54, 152, 89, 24, 54, 152, 89, 103, 106, 61, 62, 103, 106, 61, 62, 103, 106, 61, 62, 103, 106, 61, 62, 178, 87, 89, 75, 178, 87, 89, 75, 178, 87, 89, 75, 178, 87, 89, 75, 6, 117, 78, 49, 6, 117, 78, 49, 6, 117, 78, 49, 6, 117, 78, 49, 3, 139, 210, 1, 3, 139, 210, 1, 3, 139, 210, 1, 74, 168, 155, 35, 74, 168, 155, 35, 74, 168, 155, 35, 99, 219, 153, 86, 99, 219, 153, 86, 99, 219, 153, 86, 107, 150, 193, 1, 107, 150, 193, 1, 107, 150, 193, 1, 152, 214, 155, 164, 152, 214, 155, 164, 152, 214, 155, 164, 192, 129, 147, 233, 192, 129, 147, 233, 192, 129, 147, 233, 154, 163, 179, 215, 154, 163, 179, 215, 154, 163, 179, 215, 210, 129, 251, 244, 210, 129, 251, 244, 210, 129, 251, 244, 251, 116, 44, 254, 251, 116, 44, 254, 251, 116, 44, 254, 180, 87, 99, 220, 180, 87, 99, 220, 180, 87, 99, 220, 147, 105, 61, 254, 147, 105, 61, 254, 147, 105, 61, 254, 155, 36, 101, 169, 155, 36, 101, 169, 155, 36, 101, 169, 62, 126, 107, 22, 62, 126, 107, 22, 62, 126, 107, 22, 102, 41, 99, 91, 102, 41, 99, 91, 102, 41, 99, 91, 182, 98, 6, 42, 182, 98, 6, 42, 182, 98, 6, 42, 182, 98, 6, 42, 14, 114, 82, 32, 14, 114, 82, 32, 14, 114, 82, 32, 14, 114, 82, 32, 44, 126, 3, 11, 44, 126, 3, 11, 44, 126, 3, 11, 100, 92, 75, 40, 100, 92, 75, 40, 100, 92, 75, 40, 225, 108, 40, 37, 225, 108, 40, 37, 225, 108, 40, 37, 225, 108, 40, 37, 216, 118, 55, 26, 216, 118, 55, 26, 216, 118, 55, 26, 216, 118, 55, 26)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_lo5ic")

[sub_resource type="Animation" id="Animation_6c328"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scaler:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nqxfx"]
resource_name = "roll"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scaler:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5708, 0, 0), Vector3(3.14159, 0, 0), Vector3(4.71239, 0, 0), Vector3(6.28319, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdmse"]
_data = {
"RESET": SubResource("Animation_6c328"),
"roll": SubResource("Animation_nqxfx")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_qtt6a"]
size = Vector3(0.625977, 1.64954, 0.651123)

[sub_resource type="Animation" id="Animation_y4asg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("needle_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("needle_2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kj38q"]
resource_name = "default"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("needle_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("needle_2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8setm"]
_data = {
"RESET": SubResource("Animation_y4asg"),
"default": SubResource("Animation_kj38q")
}

[node name="egg" type="Node3D"]
script = ExtResource("1_kme2o")

[node name="scaler" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -3.61999e-06, 1, 0, -1, -3.61999e-06, 0, 0.209225, 0)

[node name="Object_6" type="MeshInstance3D" parent="scaler"]
transform = Transform3D(9.86439, 1.47681, 99.5015, -87.4319, 47.8789, 7.9572, -47.5226, -87.781, 6.01414, 0, 0, 0)
mesh = SubResource("ArrayMesh_2iipx")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdmse")
}

[node name="damage_reciever" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="damage_reciever"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2503, 0.780561, 0.0608521)
shape = SubResource("BoxShape3D_qtt6a")

[node name="needle_breaking" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="needle_1" type="TextureRect" parent="needle_breaking"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uq65v")

[node name="needle_2" type="TextureRect" parent="needle_breaking"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bdywv")

[node name="win_text" type="ColorRect" parent="needle_breaking"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Label" type="Label" parent="needle_breaking/win_text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -900.0
offset_top = -108.5
offset_right = 900.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_ihqxd")
theme_override_font_sizes/font_size = 74
text = "You won! 
Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="needle_breaking"]
libraries = {
"": SubResource("AnimationLibrary_8setm")
}

[connection signal="area_entered" from="damage_reciever" to="." method="_on_damage_reciever_area_entered"]
